--- a/docker-flask-tutorial/docker-compose.yml
+++ b/docker-flask-tutorial/docker-compose.yml
@@ -2,6 +2,8 @@ version: "2"
 services:
     app:
         build: ./app
+        environment:
+            MYSQL_ROOT_PASSWORD: root
         links:
             - db
         ports:
