--- a/docker-flask-tutorial/docker-compose.yml
+++ b/docker-flask-tutorial/docker-compose.yml
@@ -3,7 +3,12 @@ services:
     app:
         build: ./app
         environment:
-            MYSQL_ROOT_PASSWORD: root
+            MYSQL_USER: root #changeme
+            MYSQL_PASSWORD: root #changeme
+            MYSQL_HOST: db
+            MYSQL_DB: colors
+            MYSQL_PORT: 3306
+
         links:
             - db
         ports:
@@ -13,6 +18,6 @@ services:
         ports:
             - "32000:3306"
         environment:
-            MYSQL_ROOT_PASSWORD: root
+            MYSQL_ROOT_PASSWORD: root #changeme
         volumes:
             - ./db:/docker-entrypoint-initdb.d/:ro
