--- a/docker-flask-crud/agridies/Dockerfile
+++ b/docker-flask-crud/agridies/Dockerfile
@@ -4,8 +4,10 @@ EXPOSE 5000
 
 WORKDIR /app
 
+#FIXME#
 COPY requirements.txt /app
 RUN pip install -r requirements.txt
 
+#FIXME#
 COPY app.py /app
 CMD python app.py
